Fix right alignment on feed.

--- a/src/features/comment/CommentHeader.module.css
+++ b/src/features/comment/CommentHeader.module.css
@@ -51,3 +51,15 @@
   overflow: hidden;
   display: flex;
 }
+
+.divContainerLarge {
+  display:          flex;
+  flex-direction:   column;
+}
+
+.divChildLarge {
+  flex: 1;
+  display:          flex;
+  flex-direction:   row;
+}
+
