--- a/src/features/labels/links/shared.module.css
+++ b/src/features/labels/links/shared.module.css
@@ -21,7 +21,7 @@
 
   flex: 1;
 
-  font-weight:      200;
+  font-weight:      300;
 
   white-space:      pre-wrap;
   overflow-wrap:    break-word;
