--- a/src/features/post/inFeed/large/LargePost.module.css
+++ b/src/features/post/inFeed/large/LargePost.module.css
@@ -35,9 +35,11 @@
 }
 
 .detailsLarge {
+  width:            100%;
   display:          flex;
-  flex-wrap:        wrap;
+  flex-wrap:        nowrap;
   flex-direction:   column;
+  align-items:      right;
 }
 
 .leftDetails {
@@ -63,16 +65,9 @@
 }
 
 .rightDetailsLarge {
-  display: flex;
-  align-items: center;
-  font-size: 1.5rem;
-
-  > * {
-    padding: 0.5rem !important;
-  }
-
-  margin-left: auto;
-  margin-right: 0;
+  display:      flex;
+  align-items:  right;
+  margin-left:  auto;
 }
 
 
